# AnyTrace

./: .gitignore  Cargo.toml  LICENSE  README.md  archivo4  build.sh  default.nix  follower.sh  instructions.spanish.md  master.sh  radb.py  slave.sh
ping/: Cargo.toml
ping/src/: lib.rs
ping/src/ping/: handler.rs  mod.rs  reader.rs  writer.rs
result/final/: description.md  generate.sh  plot.py  plotmultibar.py
src/: icmp.rs  lib.rs  main.rs
src/analyze/: compare.rs  estimator.rs  graph.rs  helper.rs  join.rs  latency.rs  mod.rs  paths.rs  verification.rs
src/anytrace/: helper.rs  mod.rs
src/example/: mod.rs
src/hitlist/: hdrs.rs  mod.rs  refresh.rs  statistics.py  testings.rs
src/icmp/: mod.rs  reader.rs  writer.rs
src/ping/: mod.rs  reader.rs  writer.rs
