[package]
name = "anytrace"
version = "0.1.0"
authors = ["Felipe <fdns@niclabs.cl>"]

[dependencies]
ping = { path = "./ping" }
ipaddress = "0.1.1"
num = "0.1.32"
num-traits = "0.1.32"
num-integer = "0.1.32"
regex = "0.1.71"
rustc-serialize = "0.3"
serde = "1.0.75"
serde_json = "1.0.26"
radix_trie = "0.1"
getopts = "0.2"
log = "0.4.4"
env_logger = "0.5.13"
ratelimit_meter = "2.0.0"


[dependencies.pnet]
git = "https://github.com/libpnet/libpnet/"
rev = "743e59994b5e3b9d666cc7f7500e37ee7bbde6f7"

[dependendies.ipadress]
repository = "https://github.com/mabels/ipaddress"
