[package]
name = "anytrace"
version = "0.1.0"
authors = ["Felipe <fdns@niclabs.cl>"]

[dependencies]
ping = { path = "./ping" }
getopts = "0.2"
log = "0.4.4"
env_logger = "0.5.13"
treebitmap = "0.3.0"

[dependencies.pnet]
git = "https://github.com/libpnet/libpnet/"
rev = "743e59994b5e3b9d666cc7f7500e37ee7bbde6f7"
